// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Filter Async Filter 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-2 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  max-width: 16.875rem;
  min-width: 9.375rem;
}

.emotion-2:hover>span,
.emotion-2:active>span {
  border-top: solid 0.0625rem undefined;
  border-bottom: solid 0.0625rem undefined;
}

.emotion-2:hover>div,
.emotion-2:active>div {
  background-color: #78859f;
  border: solid 0.0625rem transparent;
}

.emotion-3 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #fff;
  background-color: #5f6c85;
  border: solid 0.0625rem transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-5 {
  margin-left: 0;
  margin-right: 0.5rem;
  max-width: 16.875rem;
}

.emotion-6 {
  font-weight: 400;
  max-width: 13.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-6 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-7 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #fff;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-9 path {
  fill: #fff;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    role="button"
  >
    <div
      className="emotion-1"
    >
      <button
        className="emotion-2"
        data-testid="filter"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
            >
              <span
                className="emotion-6"
              >
                <div>
                  Async Label :
                </div>
                <span
                  className="emotion-7"
                >
                  Default value
                </span>
              </span>
            </span>
            <span
              className="emotion-8"
              onClick={[Function]}
            >
              <span
                className="emotion-9"
              />
            </span>
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Async Filter with min characters 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-2 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  max-width: 16.875rem;
  min-width: 9.375rem;
}

.emotion-2:hover>span,
.emotion-2:active>span {
  border-top: solid 0.0625rem undefined;
  border-bottom: solid 0.0625rem undefined;
}

.emotion-2:hover>div,
.emotion-2:active>div {
  background-color: #78859f;
  border: solid 0.0625rem transparent;
}

.emotion-3 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #fff;
  background-color: #5f6c85;
  border: solid 0.0625rem transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-5 {
  margin-left: 0;
  margin-right: 0.5rem;
  max-width: 16.875rem;
}

.emotion-6 {
  font-weight: 400;
  max-width: 13.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-6 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-7 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #fff;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-9 path {
  fill: #fff;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    role="button"
  >
    <div
      className="emotion-1"
    >
      <button
        className="emotion-2"
        data-testid="filter"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
            >
              <span
                className="emotion-6"
              >
                <div>
                  Async Label :
                </div>
                <span
                  className="emotion-7"
                >
                  Default value
                </span>
              </span>
            </span>
            <span
              className="emotion-8"
              onClick={[Function]}
            >
              <span
                className="emotion-9"
              />
            </span>
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Dynamic Filter Props 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-2 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  max-width: 16.875rem;
  min-width: 9.375rem;
}

.emotion-2:hover>span,
.emotion-2:active>span {
  border-top: solid 0.0625rem undefined;
  border-bottom: solid 0.0625rem undefined;
}

.emotion-2:hover>div,
.emotion-2:active>div {
  background-color: #d3dae5;
  border: solid 0.0625rem transparent;
}

.emotion-3 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0e0e17;
  background-color: #f3f5f8;
  border: solid 0.0625rem transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-5 {
  margin-left: 0;
  margin-right: 0.5rem;
  max-width: 16.875rem;
}

.emotion-6 {
  font-weight: 400;
  max-width: 13.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-6 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-7 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #0e0e17;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-9 path {
  fill: #0e0e17;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div>
    <div
      role="button"
    >
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="filter"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-6"
                >
                  <div>
                    you can change me :
                  </div>
                  <span
                    className="emotion-7"
                  >
                    Peach
                  </span>
                </span>
              </span>
              <span
                className="emotion-8"
                onClick={[Function]}
              >
                <span
                  className="emotion-9"
                />
              </span>
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Filter with big text 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  max-width: 16.875rem;
  min-width: 9.375rem;
}

.emotion-3:hover>span,
.emotion-3:active>span {
  border-top: solid 0.0625rem undefined;
  border-bottom: solid 0.0625rem undefined;
}

.emotion-3:hover>div,
.emotion-3:active>div {
  background-color: #677fad;
  border: solid 0.0625rem transparent;
}

.emotion-4 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0e0e17;
  background-color: #889BBF;
  border: solid 0.0625rem transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-6 {
  margin-left: 0;
  margin-right: 0.5rem;
  max-width: 16.875rem;
}

.emotion-7 {
  font-weight: 400;
  max-width: 13.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-7 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-7 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-8 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: #0e0e17;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-10 path {
  fill: #0e0e17;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      <div>
                        Label :
                      </div>
                      <span
                        className="emotion-8"
                      >
                        default item is a very long text that should not be overflow ellipsis
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      <div>
                        Label :
                      </div>
                      <span
                        className="emotion-8"
                      >
                        default item is a very long text that should be overflow ellipsis because the max width of the component is smaller than the width of the text
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Filter with colors 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  max-width: 16.875rem;
  min-width: 9.375rem;
}

.emotion-3:hover>span,
.emotion-3:active>span {
  border-top: solid 0.0625rem undefined;
  border-bottom: solid 0.0625rem undefined;
}

.emotion-3:hover>div,
.emotion-3:active>div {
  background-color: #6a00ff;
  border: solid 0.0625rem transparent;
}

.emotion-4 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #fff;
  background-color: #8833FF;
  border: solid 0.0625rem transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-6 {
  margin-left: 0;
  margin-right: 0.5rem;
  max-width: 16.875rem;
}

.emotion-7 {
  font-weight: 400;
  max-width: 13.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-7 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-7 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-8 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: #fff;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-10 path {
  fill: #fff;
}

.emotion-12 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  max-width: 16.875rem;
  min-width: 9.375rem;
}

.emotion-12:hover>span,
.emotion-12:active>span {
  border-top: solid 0.0625rem undefined;
  border-bottom: solid 0.0625rem undefined;
}

.emotion-12:hover>div,
.emotion-12:active>div {
  background-color: #6a00ff;
  border: solid 0.0625rem #6a00ff;
}

.emotion-13 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #fff;
  background-color: #8833FF;
  border: solid 0.0625rem #6c28cc;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-20 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
  -webkit-filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.07));
  filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.07));
}

.emotion-31 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #fff;
  background-color: #fdfdfd;
  border: solid 0.0625rem transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-40 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  max-width: 16.875rem;
  min-width: 9.375rem;
}

.emotion-40:hover>span,
.emotion-40:active>span {
  border-top: solid 0.0625rem undefined;
  border-bottom: solid 0.0625rem undefined;
}

.emotion-40:hover>div,
.emotion-40:active>div {
  background-color: #9c0fa6;
  border: solid 0.0625rem transparent;
}

.emotion-41 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #fff;
  background-color: #C813D5;
  border: solid 0.0625rem transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-49 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  max-width: 16.875rem;
  min-width: 9.375rem;
}

.emotion-49:hover>span,
.emotion-49:active>span {
  border-top: solid 0.0625rem undefined;
  border-bottom: solid 0.0625rem undefined;
}

.emotion-49:hover>div,
.emotion-49:active>div {
  background-color: #9c0fa6;
  border: solid 0.0625rem #9c0fa6;
}

.emotion-50 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #fff;
  background-color: #C813D5;
  border: solid 0.0625rem #a00faa;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <h2>
    Primary
  </h2>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      <div>
                        Label :
                      </div>
                      <span
                        className="emotion-8"
                      >
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-12"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-13"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      <div>
                        Label :
                      </div>
                      <span
                        className="emotion-8"
                      >
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-20"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      <div>
                        Label :
                      </div>
                      <span
                        className="emotion-8"
                      >
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-31"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      <div>
                        Label :
                      </div>
                      <span
                        className="emotion-8"
                      >
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h2>
    Secondary
  </h2>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-40"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-41"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      <div>
                        Label :
                      </div>
                      <span
                        className="emotion-8"
                      >
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-49"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-50"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      <div>
                        Label :
                      </div>
                      <span
                        className="emotion-8"
                      >
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-20"
          >
            <button
              className="emotion-40"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-41"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      <div>
                        Label :
                      </div>
                      <span
                        className="emotion-8"
                      >
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-40"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-31"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      <div>
                        Label :
                      </div>
                      <span
                        className="emotion-8"
                      >
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Filter with style types 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  max-width: 16.875rem;
  min-width: 9.375rem;
}

.emotion-3:hover>span,
.emotion-3:active>span {
  border-top: solid 0.0625rem undefined;
  border-bottom: solid 0.0625rem undefined;
}

.emotion-3:hover>div,
.emotion-3:active>div {
  background-color: #d3dae5;
  border: solid 0.0625rem transparent;
}

.emotion-4 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0e0e17;
  background-color: #f3f5f8;
  border: solid 0.0625rem transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-6 {
  margin-left: 0;
  margin-right: 0.5rem;
  max-width: 16.875rem;
}

.emotion-7 {
  font-weight: 400;
  max-width: 13.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-7 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-7 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-8 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: #0e0e17;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-10 path {
  fill: #0e0e17;
}

.emotion-12 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  max-width: 16.875rem;
  min-width: 9.375rem;
}

.emotion-12:hover>span,
.emotion-12:active>span {
  border-top: solid 0.0625rem undefined;
  border-bottom: solid 0.0625rem undefined;
}

.emotion-12:hover>div,
.emotion-12:active>div {
  background-color: #d3dae5;
  border: solid 0.0625rem #d3dae5;
}

.emotion-13 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0e0e17;
  background-color: #f3f5f8;
  border: solid 0.0625rem #dbe1eb;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-20 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
  -webkit-filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.07));
  filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.07));
}

.emotion-31 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0e0e17;
  background-color: #fdfdfd;
  border: solid 0.0625rem transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-40 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  max-width: 16.875rem;
  min-width: 9.375rem;
}

.emotion-40:hover>span,
.emotion-40:active>span {
  background-color: transparent;
  border-top: solid 0.0625rem transparent;
  border-bottom: solid 0.0625rem transparent;
}

.emotion-40:hover>div,
.emotion-40:active>div {
  background-color: #bd8eff;
  border: solid 0.0625rem transparent;
}

.emotion-41 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0e0e17;
  background-color: #dbc1ff;
  border: solid 0.0625rem transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 0.25rem 0 1rem;
  border-radius: 1.5rem;
  border-right: 0!important;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-48 {
  height: 100%;
  width: 0.0625rem;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  background-color: transparent;
  border-top: solid 0.0625rem transparent;
  border-bottom: solid 0.0625rem transparent;
}

.emotion-49 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0e0e17;
  background-color: #dbc1ff;
  border: solid 0.0625rem transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-left: 0!important;
  padding-right: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 2.125rem;
  border-top-right-radius: 1.5rem;
  border-bottom-right-radius: 1.5rem;
}

.emotion-51 {
  fill: #444d5f;
  width: 1.1875rem;
  height: 1.1875rem;
}

.emotion-51 path {
  fill: #444d5f;
}

.emotion-53 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  max-width: 16.875rem;
  min-width: 9.375rem;
}

.emotion-53:hover>span,
.emotion-53:active>span {
  background-color: transparent;
  border-top: solid 0.0625rem transparent;
  border-bottom: solid 0.0625rem transparent;
}

.emotion-53:hover>div,
.emotion-53:active>div {
  background-color: #bd8eff;
  border: solid 0.0625rem #bd8eff;
}

.emotion-54 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0e0e17;
  background-color: #dbc1ff;
  border: solid 0.0625rem #c399ff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 0.25rem 0 1rem;
  border-radius: 1.5rem;
  border-right: 0!important;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-61 {
  height: 100%;
  width: 0.0625rem;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  background-color: transparent;
  border-top: solid 0.0625rem #c399ff;
  border-bottom: solid 0.0625rem #c399ff;
}

.emotion-62 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0e0e17;
  background-color: #dbc1ff;
  border: solid 0.0625rem #c399ff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-left: 0!important;
  padding-right: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 2.125rem;
  border-top-right-radius: 1.5rem;
  border-bottom-right-radius: 1.5rem;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <h2>
    Preset
  </h2>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      <div>
                        Label :
                      </div>
                      <span
                        className="emotion-8"
                      >
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-12"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-13"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      <div>
                        Label :
                      </div>
                      <span
                        className="emotion-8"
                      >
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-20"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      <div>
                        Label :
                      </div>
                      <span
                        className="emotion-8"
                      >
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-31"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      <div>
                        Label :
                      </div>
                      <span
                        className="emotion-8"
                      >
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h2>
    Added
  </h2>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-40"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-41"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      <div>
                        Label :
                      </div>
                      <span
                        className="emotion-8"
                      >
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </span>
              </div>
              <span
                className="emotion-48"
              />
              <div
                className="emotion-49"
              >
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-51"
                  />
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-53"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-54"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      <div>
                        Label :
                      </div>
                      <span
                        className="emotion-8"
                      >
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </span>
              </div>
              <span
                className="emotion-61"
              />
              <div
                className="emotion-62"
              >
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-51"
                  />
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-20"
          >
            <button
              className="emotion-40"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-41"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      <div>
                        Label :
                      </div>
                      <span
                        className="emotion-8"
                      >
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </span>
              </div>
              <span
                className="emotion-48"
              />
              <div
                className="emotion-49"
              >
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-51"
                  />
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Searchable Filter 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  max-width: 16.875rem;
  min-width: 9.375rem;
}

.emotion-3:hover>span,
.emotion-3:active>span {
  border-top: solid 0.0625rem undefined;
  border-bottom: solid 0.0625rem undefined;
}

.emotion-3:hover>div,
.emotion-3:active>div {
  background-color: #d3dae5;
  border: solid 0.0625rem transparent;
}

.emotion-4 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0e0e17;
  background-color: #f3f5f8;
  border: solid 0.0625rem transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-6 {
  margin-left: 0;
  margin-right: 0.5rem;
  max-width: 16.875rem;
}

.emotion-7 {
  font-weight: 400;
  max-width: 13.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-7 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-7 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-8 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: #0e0e17;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-10 path {
  fill: #0e0e17;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      <div>
                        Label :
                      </div>
                      <span
                        className="emotion-8"
                      >
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
